--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "license": "ISC",
   "dependencies": {
     "@openzeppelin/contracts": "^4.8.1",
+    "axios": "^1.3.3",
+    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^6.9.1"
+    "formidable": "^2.1.1",
+    "mongoose": "^6.9.1",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.1",
