--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "express": "^4.18.2",
     "formidable": "^2.1.1",
     "mongoose": "^6.9.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.1"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.1",
